--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.6",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.3.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
